--- a/styles.css
+++ b/styles.css
@@ -4,5 +4,14 @@ h1, h2, p {
 
 .webpage {
     background-color: lightblue;
-    padding: 5%;
+    padding: 1px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
+    max-width: 500px;
+}
+
+body {
+    background-image: url(https://github.com/clark-bai/clark-bai.github.io/blob/main/IMG_1864.jpeg?raw=true);
+    
 }
